--- a/Workshops/02.Angular 2/top-movies_skeleton/core/movie/movies-list.component.html
+++ b/Workshops/02.Angular 2/top-movies_skeleton/core/movie/movies-list.component.html
@@ -5,18 +5,10 @@
         <th class="col-sm-1">Year</th>
         <th class="col-sm-1">Raiting</th>
     </tr>
-    <tr class="movie row col-sm-12" *ngFor="let movie of movies">
-        <td class="img-container col-sm-3">
-            <img [src]="movie.Poster" alt="Poster" width="100">
-        </td>
-        <td class="title-container col-sm-7">
-            <a href="#" class="title">{{movie.Title}}</a>
-        </td>
-        <td class="year-container col-sm-1">
-            <span class="year">{{movie.Year}}</span>
-        </td>
-        <td class="raitng col-sm-1">
-            <span class="imdbRating">{{movie.imdbRating}}</span>
-        </td>
-    </tr>
+    <tbody>
+        <tr class="row col-sm-12" mvdb-movie-short *ngFor="let movie of movies" [movie]="movie"></tr>
+        <!--<tr>
+            <mvdb-movie-short *ngFor="let movie of movies" [movie]="movie"></mvdb-movie-short>
+        </tr>-->
+    </tbody>
 </table>
