--- a/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/movies-list.component.html
+++ b/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/movies-list.component.html
@@ -1,28 +1,47 @@
 <h3 class="col-sm-offset-5">Search Movie</h3>
 <form class="col-sm-6 col-sm-offset-3">
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input type="text" class="form-control" id="title" #search (keyup)="setSearchMovie(search.value)">
-  </div>
-  <div class="form-group">
-      <div class="col-sm-6">
-        <label for="sortBy">Sort by</label>
-        <select class="form-control" id="sortBy" #sorted (change)="sortBy(sorted.value)">
+    <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title"  #title (keyup)="getMovieFromImdb(title.value, 1)">
+    </div>
+    <div class="form-group">
+        <div class="col-sm-6">
+            <label for="sortBy">Sort by</label>
+            <select class="form-control" id="sortBy" #sorted (change)="sortBy(sorted.value)">
             <option value="Title" selected>Title</option>
             <option value="Year">Year</option>
             <option value="imdbRating">Rating</option>
         </select>
-    </div>
-    <div class="col-sm-6">
-    <label for="orderBy">Order</label>
-        <select class="form-control" id="orderBy" #ordered (change)="orderBy(ordered.value)">
+        </div>
+        <div class="col-sm-6">
+            <label for="orderBy">Order</label>
+            <select class="form-control" id="orderBy" #ordered (change)="orderBy(ordered.value)">
             <option value="Asc" selected>Asc</option>
             <option value="Desc">Desc</option>
         </select>
+        </div>
     </div>
-  </div>
 </form>
 
+<nav class="row col-sm-12" aria-label="Page navigation">
+  <ul class="pagination">
+    <li class="page-item">
+      <a class="page-link" href="" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>
+    <template ngFor let-page [ngForOf]="pages">
+        <li class="page-item" style="cursor: pointer" (click)="getMovieFromImdb(title.value, page)"><a class="page-link">{{page}}</a></li>
+    </template>
+    <li class="page-item">
+      <a class="page-link" href="" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 <table class="col-sm-12">
     <tr class="row col-sm-12">
         <th class="col-sm-3">Poster</th>
@@ -31,9 +50,6 @@
         <th class="col-sm-1">Raiting</th>
     </tr>
     <tbody>
-        <tr class="row col-sm-12" mvdb-movie-short *ngFor="let movie of (movies | filter: getSearchMovie() | sort: sortBy(): orderBy())" [movie]="movie"></tr>
-        <!--<tr>
-            <mvdb-movie-short *ngFor="let movie of movies" [movie]="movie"></mvdb-movie-short>
-        </tr>-->
+        <tr class="row col-sm-12" mvdb-movie-short *ngFor="let movie of (getMovies() | sort: sortBy(): orderBy())" [movie]="movie"></tr>
     </tbody>
 </table>
