--- a/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/movie-short.component.html
+++ b/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/movie-short.component.html
@@ -2,7 +2,7 @@
     <img [src]="poster" alt="Poster" width="100">
 </td>
 <td class="title-container col-sm-7">
-    <a href="#" class="title">{{title}}</a>
+    <a href="/movie/{{id}}" class="title">{{title}}</a>
 </td>
 <td class="year-container col-sm-1">
     <span class="year">{{year}}</span>
