Added routes for search and movie details

--- a/Workshops/02.Angular 2/top-movies_skeleton/app/app.component.html
+++ b/Workshops/02.Angular 2/top-movies_skeleton/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>Movies</h1>
-<movies-list></movies-list>
+<h1 class="col-sm-offset-2">Angular 2 Simple Movie Aplication</h1>
+<a href="/movies" class="col-sm-offset-5">Search Movies</a>
 <router-outlet></router-outlet>
