--- a/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/movies-list.component.html
+++ b/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/movies-list.component.html
@@ -23,7 +23,18 @@
     </div>
 </form>
 
-<nav class="row col-sm-12" aria-label="Page navigation">
+<table class="col-sm-12">
+    <tr class="row col-sm-12">
+        <th class="col-sm-3">Poster</th>
+        <th class="col-sm-7">Title</th>
+        <th class="col-sm-1">Year</th>
+        <th class="col-sm-1">Raiting</th>
+    </tr>
+    <tbody>
+        <tr class="row col-sm-12" mvdb-movie-short *ngFor="let movie of (getMovies() | sort: sortBy(): orderBy())" [movie]="movie"></tr>
+    </tbody>
+</table>
+<div class="row col-sm-12" aria-label="Page navigation">
   <ul class="pagination">
     <li class="page-item">
       <a class="page-link" href="" aria-label="Previous">
@@ -41,15 +52,4 @@
       </a>
     </li>
   </ul>
-</nav>
-<table class="col-sm-12">
-    <tr class="row col-sm-12">
-        <th class="col-sm-3">Poster</th>
-        <th class="col-sm-7">Title</th>
-        <th class="col-sm-1">Year</th>
-        <th class="col-sm-1">Raiting</th>
-    </tr>
-    <tbody>
-        <tr class="row col-sm-12" mvdb-movie-short *ngFor="let movie of (getMovies() | sort: sortBy(): orderBy())" [movie]="movie"></tr>
-    </tbody>
-</table>
+</div>
