--- a/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/single-movie.component.html
+++ b/Workshops/02.Angular 2/top-movies_skeleton/app/core/movie/single-movie.component.html
@@ -21,25 +21,27 @@
     "Response":"True"
     }-->
 <div class="movie-container">
-    <img src="{{poster}}" alt="Poster" class="col-sm-4">
-    <div class="col-sm-8">
-        <div class="col-sm-2">Title: </div>
-        <h3 class="col-sm-6">{{title}}</h3>
-    </div>
-    <div class="col-sm-8">
-        <div class="col-sm-2">Year: </div>
-        <div class="col-sm-6">{{Year}}</div>
-    </div>
-    <div class="col-sm-8">
-        <div class="col-sm-2">Released: </div>
-        <div class="col-sm-6">{{Released}}</div>
-    </div>
-    <div class="col-sm-8">
-        <div class="col-sm-2">Director: </div>
-        <div class="col-sm-6">{{Director}}</div>
-    </div>
-    <div class="col-sm-8">
-        <div class="col-sm-2">Writer: </div>
-        <div class="col-sm-6">{{Writer}}</div>
-    </div>
+    <img src="{{getKey('Poster')}}" alt="Poster" class="col-sm-4">
+    <dl class="dl-horizontal col-sm-8">
+        <dt>Title: </dt>
+        <dd>{{getKey('Title')}}</dd>
+        <dt>Year: </dt>
+        <dd>{{getKey('Year')}}</dd>
+        <dt>Released: </dt>
+        <dd>{{getKey('Released')}}</dd>
+        <dt>Director: </dt>
+        <dd>{{getKey('Director')}}</dd>
+        <dt>Writer: </dt>
+        <dd>{{getKey('Writer')}}</dd>
+        <dt>Language: </dt>
+        <dd>{{getKey('Language')}}</dd>
+        <dt>Plot: </dt>
+        <dd>{{getKey('Plot')}}</dd>
+        <dt>Actors: </dt>
+        <dd>{{getKey('Actors')}}</dd>
+        <dt>Genre: </dt>
+        <dd>{{getKey('Genre')}}</dd>
+        <dt>Runtime: </dt>
+        <dd>{{getKey('Runtime')}}</dd>
+    </dl>
 </div>
